Revert "Merge pull request #3414 from rsksmart/cleanup-activations"
This reverts commit 3306e5b17d4f494fc25dfa6b90d7906778ce9495, reversing
changes made to 7a29d4846add8f15424cea26649fd11954c8ae1c.

--- a/rskj-core/src/main/resources/config/regtest.conf
+++ b/rskj-core/src/main/resources/config/regtest.conf
@@ -21,6 +21,10 @@ blockchain.config {
     },
     consensusRules = {
         rskip97 = -1 # disable orchid difficulty drop
+        rskipUMM = 1
+        rskip144 = 1
+        rskip351 = 1
+        rskip535 = 1
     }
 }
 
