Increase the gas limit to 11M

--- a/rskj-core/src/main/resources/config/testnet.conf
+++ b/rskj-core/src/main/resources/config/testnet.conf
@@ -96,3 +96,9 @@ wallet {
 #        size: 20000
 #    }
 #}
+
+# Set the target gas limit to 11,000,000
+targetgaslimit = 11000000
+rpc {
+    gasEstimationCap = 11000000
+}
