--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -1,3 +1,4 @@
+# @formatter:off
 blockchain = {
     config = {
         # Flag that forces to verify whether a node is started with unknown configuration property names.
@@ -96,6 +97,7 @@ blockchain = {
             rskip502 = reed810
             rskip516 = reed800
             rskip529 = reed810
+            rskip535 = vetiver900
             rskip536 = reed810
         }
     }
