Small refactor in integration tests
- Improving the PTE integration test and make the port not fixed
- Refactors in the integration tests to make it more reliable

--- a/rskj-core/build.gradle
+++ b/rskj-core/build.gradle
@@ -428,6 +428,7 @@ dependencies {
     integrationTestImplementation "${testLibs.junitSuite}"
     integrationTestImplementation "${testLibs.mockitoLib}"
     integrationTestImplementation "${testLibs.mockitoJupiter}"
+    integrationTestImplementation "${testLibs.awaitilityLib}"
     integrationTestImplementation "${testLibs.jacksonLib}"
     integrationTestImplementation "${testLibs.okhttpWsLib}"
     integrationTestImplementation "${libs.commonsLang3Lib}"
