Add RSKIP544: Reject contract code starting with 0xEF byte
- Introduced new consensus rule RSKIP544 to reject contract creation with code starting with the 0xEF byte, in accordance with EIP-3541.
- Updated `TransactionExecutor` and `Program` classes to implement checks for the new rule.
- Added tests to validate behavior before and after RSKIP544 activation, ensuring correct handling of contract creation with various bytecode patterns.
- Updated configuration files to include the new hardfork.

--- a/rskj-core/src/main/resources/expected.conf
+++ b/rskj-core/src/main/resources/expected.conf
@@ -116,6 +116,7 @@ blockchain = {
             rskip529 = <hardforkName>
             rskip535 = <hardforkName>
             rskip536 = <hardforkName>
+            rskip544 = <hardforkName>
         }
     }
     gc = {
