--- a/rskj-core/src/main/resources/reference.conf
+++ b/rskj-core/src/main/resources/reference.conf
@@ -99,6 +99,7 @@ blockchain = {
             rskip529 = reed810
             rskip535 = vetiver900
             rskip536 = reed810
+            rskip544 = vetiver900
         }
     }
     gc = {
