--- a/.github/workflows/devportal-update.yml
+++ b/.github/workflows/devportal-update.yml
@@ -35,23 +35,25 @@ jobs:
           VERSION=$(tr -d "'\"" < rskj-core/src/main/resources/version.properties | cut -d = -f 2- | paste -sd - -)
           echo "RSK_VERSION=${VERSION}" >> $GITHUB_ENV
 
-      # Step 1: Clone the DevPortal Repository
-      - name: Clone DevPortal Repository
-        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      # Step 1: Generate GitHub App Token
+      - name: Generate GitHub App Token
+        id: generate_token
+        uses: actions/create-github-app-token@31c86eb3b33c9b601a1f60f98dcbfd1d70f379b4 # v1.10.3
         with:
-          repository: rsksmart/devportal
-          path: devportal
-          token: ${{ secrets.DEVPORTAL_DOCS_UPDATE_TOKEN }}
+          app-id: ${{ secrets.GH_APP_ID }}
+          private-key: ${{ secrets.GH_APP_PRIVATE_KEY }}
+          owner: rsksmart
+          repositories: devportal
 
-      # Step 2: Create the local branch
-      - name: Create branch for PR to update DevPortal
-        env:
-          GITHUB_TOKEN: ${{ secrets.DEVPORTAL_DOCS_UPDATE_TOKEN }}
+      # Step 2: Clone the Devportal Repository and create branch
+      - name: Clone Devportal Repository
         run: |
-          cd devportal
           BRANCH_NAME="update-from-rskj-${{ env.RSK_VERSION }}"
           echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
-          git checkout  -b ${BRANCH_NAME} || git checkout ${BRANCH_NAME}
+
+          git clone https://x-access-token:${{ steps.generate_token.outputs.token }}@github.com/rsksmart/devportal.git
+          cd devportal
+          git checkout -b ${BRANCH_NAME} || git checkout ${BRANCH_NAME}
           cd ..
 
       # Step 3: Transform Each File and Copy to DevPortal Repository
@@ -67,26 +69,22 @@ jobs:
 
       # Step 4: Commit and Push Changes to DevPortal Repository
       - name: Commit and Push Changes
-        env:
-          GITHUB_TOKEN: ${{ secrets.DEVPORTAL_DOCS_UPDATE_TOKEN }}
         run: |
           cd devportal
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add docs
           git commit -m "Automated update from rskj repository"
-          git remote set-url origin https://x-access-token:${{ env.GITHUB_TOKEN }}@github.com/rsksmart/devportal.git
+          git remote set-url origin https://x-access-token:${{ steps.generate_token.outputs.token }}@github.com/rsksmart/devportal.git
           echo "Pushing branch: ${{ env.BRANCH_NAME }}"
           git push -u  -f origin ${{ env.BRANCH_NAME }}
 
       # Step 5: Create a Pull Request in the DevPortal Repository
       - name: Create Pull Request
-        env:
-          GITHUB_TOKEN: ${{ secrets.DEVPORTAL_DOCS_UPDATE_TOKEN }}
         run: |
           PR_RESPONSE=$(curl -L -X POST \
           -H "Accept: application/vnd.github+json" \
-          -H "Authorization: Bearer ${{ env.GITHUB_TOKEN }}" \
+          -H "Authorization: Bearer ${{ steps.generate_token.outputs.token }}" \
           -H "X-GitHub-Api-Version: 2022-11-28" \
           https://api.github.com/repos/rsksmart/devportal/pulls \
           -d '{
